@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer-sh
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/mplayer-sh/ChangeLog,v 1.2 2003/04/11 21:44:27 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/mplayer-sh/ChangeLog,v 1.3 2003/05/01 11:44:40 mad Exp $
+
+*mplayer-sh-0.8.2.ebuild (01 May 2003)
+  01 May 2003; M.Hierling <mad@cc.fh-lippe.de> mplayer-sh-0.8.2.ebuild
+  new mplayer.sh
 
 *mplayer-sh-0.8.1.ebuild (11 Apr 2003)
   11 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> mplayer-sh-0.8.1.ebuild
